[gd_scene load_steps=5 format=3 uid="uid://cgs54jmueouap"]

[ext_resource type="Theme" uid="uid://gy415apsmw3w" path="res://resources/theme.tres" id="1_j36cb"]
[ext_resource type="Script" uid="uid://bxvaeiieiw5mi" path="res://scripts/card_info_screen.gd" id="1_qgqy1"]
[ext_resource type="Texture2D" uid="uid://bo53rmen2r550" path="res://resources/background-texture.svg" id="3_vcjfw"]
[ext_resource type="Texture2D" uid="uid://bl3233l58tgod" path="res://resources/cancel.svg" id="5_3ww0p"]

[node name="CardInfoScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j36cb")
theme_type_variation = &"Background"
script = ExtResource("1_qgqy1")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.105882354)
layout_mode = 2
texture = ExtResource("3_vcjfw")
stretch_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 96

[node name="CardsGrid" type="GridContainer" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/h_separation = 72
theme_override_constants/v_separation = 36
columns = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="CloseButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"ButtonYellow"

[node name="Control" type="Control" parent="MarginContainer/CloseButton"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CloseButton/Control"]
modulate = Color(0.25882354, 0.27058825, 0.3372549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3ww0p")
expand_mode = 5

[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
